--- a/game/templates/index.html
+++ b/game/templates/index.html
@@ -17,5 +17,10 @@
     </div>
     <input type="submit" class="button" value="Start Game" />
   </form>
+
 </div>
+
+    <div id="game_board" room_code="1" style="display: none"></div>
+    <div id = "alert_move" style="display: none"></div>
+
 {% endblock content %}
